# cli-framework

./: LICENSE  cli-framework.cabal
CLI/: Framework.hs
CLI/Framework/: Application.hs  Command.hs
