name:                cli-framework
version:             0.1.0.0
synopsis:            Framework for creating command-line programs
-- description:
homepage:            https://github.com/sw1sh/cli-framework
license:             MIT
license-file:        LICENSE
author:              Nikolay Murzin
maintainer:          nikolay.murzin@ru.ibm.com
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
      CLI.Framework
    , CLI.Framework.Command
  other-modules: CLI.Framework.Application
  default-extensions: LambdaCase, OverloadedStrings, RecordWildCards, ScopedTypeVariables
  build-depends:
      base >= 4.7
    , data-default
    , haskeline
    , mtl
    , text
    , transformers

  -- hs-source-dirs:

  default-language:    Haskell2010
